Add products and services link after About us

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -191,6 +191,7 @@
             <h5 subheadline>Company</h5>
             <ul class="list-unstyled">
               <li><a href="#aboutUs">About Us</a></li>
+              <li><a href="#productsAndServices">Services and Pricing</a></li>
             </ul>
           </div>
           <div class="col-4 col-md-4 col-sm-4">
