1. Change radio to checkbox on home page for For Sale business 2. Remove , from details page location If location is anonymous

--- a/src/main/resources/static/resources/pages/businessDetails.html
+++ b/src/main/resources/static/resources/pages/businessDetails.html
@@ -35,7 +35,13 @@
             <div class="page-header bordered">
                 <div class="row">
                     <div class="col-md-10"> <a href="#" class="btn-return" title="Back"><i class="fa fa-angle-left"></i></a>
-                        <h1>{{businessDetails.name}} ({{businessDetails.type}}) <small><i class="fa fa-map-marker"></i> {{businessDetails.street1}}, {{businessDetails.street2}}, {{businessDetails.city}} {{businessDetails.stateCode}}</small></h1>
+                        <h1>{{businessDetails.name}} ({{businessDetails.type}})
+                            <div ng-if="businessDetails.street1 || businessDetails.city">
+                                <small ng-if="businessDetails.street1 && businessDetails.street2"><i class="fa fa-map-marker"></i> {{businessDetails.street1}}, {{businessDetails.street2}}, {{businessDetails.city}} {{businessDetails.stateCode}}</small>
+                                <small ng-if="businessDetails.street1 && !businessDetails.street2"><i class="fa fa-map-marker"></i> {{businessDetails.street1}}, {{businessDetails.city}} {{businessDetails.stateCode}}</small>
+                                <small ng-if="!businessDetails.street1 && !businessDetails.street2"><i class="fa fa-map-marker"></i> {{businessDetails.city}} {{businessDetails.stateCode}}</small>
+                            </div>
+                        </h1>
                     </div>
                     <div class="col-md-2">
                         <div class="btn-group btn-group-justified" role="group">
