--- a/src/main/resources/static/resources/pages/home.html
+++ b/src/main/resources/static/resources/pages/home.html
@@ -126,19 +126,16 @@
                 <input type="text" id="postal_code" name="businessZipcode" ng-model="businessZipcode" class="form-control"
                        placeholder="">
               </div>
-                <div class="col-md-7 col-lg-5 col-xl-5">
-                    <label style="color:white;margin-top:30px">Looking for On Sale Businesses</label>
-                    <div class="radio radio-inline">
-                        <input type="radio" id="isForSell" ng-model="isForSell" value="Y">
-                        <label style="color:white" for="isForSell">Yes</label>
-                    </div>
-                    <div class="radio radio-inline">
-                        <input type="radio" id="noSell" ng-model="isForSell" value="N">
-                        <label style="color:white" for="noSell">No</label>
+                <div class="col-md-5 col-lg-4 col-xl-4">
+<!--                    <label style="color:white;margin-top:30px">Show For Sell Business only</label>-->
+                    <div class="checkbox checkbox-inline">
+                        <input type="checkbox" name="isForSell" id="isForSell" ng-model="isForSell" ng-false-value="N"
+                               ng-true-value="Y">
+                        <label style="color:white;margin-top:30px" for="isForSell">Show For Sale Business only</label>
                     </div>
                 </div>
 
-                <div class="col-md-2 col-lg-1 col-xl-1">
+                <div class="col-md-1 col-lg-1 col-xl-1">
                     <label style="color:#eee;margin:0;visibility:hidden">Test</label>
                     <div class="form-group">
                         <input type="submit" value="Search" class="btn btn-md btn-primary" ng-click="search(searchBusinessForm)">
