--- a/src/main/resources/static/resources/pages/contactUs.html
+++ b/src/main/resources/static/resources/pages/contactUs.html
@@ -1,7 +1,7 @@
 <div ng-hide="contactUsData.emailSent">
     <div class="page-header bordered" ng-hide="contactUsData.emailSent">
         <div class="col-md-12 col-lg-12 col-xl-12">
-            <h1>Contact Us <b style="color:red">&#9990; 1-855-5-CALL-RW (1-855-522-5579) or Please Submit Below Form</b>
+            <h1>Contact Us &#9990; 1-855-5-CALL-RW (1-855-522-5579) or Please Submit Below Form.
                 <small>Have a question, problem, or suggestion? We want to hear from you.</small>
             </h1>
         </div>
