Updates for formating

--- a/src/main/resources/static/resources/pages/header.html
+++ b/src/main/resources/static/resources/pages/header.html
@@ -77,7 +77,7 @@
             </div>
         </li>
 	<li class="nav-item">
-		<a class="nav-link nav-btn" ng-click=""><b style="color:red">&#9990; 1-855-5-CALL-RW (1-855-522-5579)</b></a>
+		<a class="nav-link nav-btn" ng-click=""><b style="color:red">&#9990; 1-855-522-5579</b></a>
 	</li>
 <!--        <li class="nav-item dropdown">-->
 <!--        <a class="nav-link dropdown-toggle" href="#search/Buy" role="button" aria-haspopup="true" aria-expanded="false">-->
