--- a/src/main/resources/static/resources/pages/home.html
+++ b/src/main/resources/static/resources/pages/home.html
@@ -56,7 +56,7 @@
     <div class="row justify-content-md-center">
       <div class="col-md-12 col-lg-12 col-xl-12 central-content">
         <div class="heading">
-          <h2>Find <i>RealWorth</i>&trade; of Business!</h2>
+          <h2>Find <i>RealWorth</i><small>&trade;</small> of Business!</h2>
 	  <h6 style="color:#FF0000">Currently serving San Francisco - San Jose - Bay Area in California.</h6>
         </div>
         <form name="searchBusinessForm" ng-controller="homeController" ng-submit="submitted = true" novalidate>
@@ -131,7 +131,7 @@
                     <div class="checkbox checkbox-inline">
                         <input type="checkbox" name="isForSell" id="isForSell" ng-model="isForSell" ng-false-value="N"
                                ng-true-value="Y">
-                        <label style="color:white;margin-top:30px" for="isForSell">Show For Sale Business only</label>
+                        <label style="color:white;margin-top:30px" for="isForSell">Show For Sale Business Only</label>
                     </div>
                 </div>
 
