--- a/src/main/resources/static/resources/pages/aboutUs.html
+++ b/src/main/resources/static/resources/pages/aboutUs.html
@@ -39,17 +39,17 @@ h2 h6 {
 </style>
 <div class="about-section">
     <h2>Overview</h2>
-    <p>RealWorth.com is designed to helps you realize the value of a business.</p>
+    <p>www.BizRealWorth.com is dedicated to helping Small Business Community all over US, to measure the RealWorth&trade; of their business or business they want to purchase.</p>
 
     <p>Our mission is to empower small business community by the means of digitization of information and advancement in data collection and data processing technologies like Data Mining, Digital Transformations, AI and ML.</p>
 
-    <p>Real Worth can help you know more about businesses in the area where you are doing business, or thinking of starting business or selling business and can help you visualize the true potential or Real Worth of the opportunity!</p>
+    <p>Our innovative self evolving algorithm that is named RealWorth&trade; can help you know more about businesses in the area where you are doing business, or thinking of starting business or selling business and can help you visualize the true potential or Real Worth of the opportunity!</p>
 
     <p>Right before our eyes, nearly every aspect of our lives is rapidly evolving, so much so that it is difficult to keep up. This rapid evolution presents opportunities for us to examine where we have come from, assess where we want to go, and redefine ourselves as Business.</p>
 
     <p>Business Valuation used to be the domain of big public companies. It was technically complex. It had high up-front costs and it’s expensive. All this made it impractical for Main Street Mom and Pop stores and smaller companies to get professional valuation done.</p>
 
-    <p>RealWorth changes all of that.</p>
+    <p>RealWorth&trade; changes all of that.</p>
 
     <p>Our data is complete, verified, processed through multiple AI and ML algorithms to make sure it’s curated with the strict rules of Data Science!</p>
 
@@ -80,6 +80,9 @@ h2 h6 {
     <h6>3. Business Brokers - <span>www.BizRealWorth.com provides tools and services to small business community and attracts heavy traffic of audience focused on starting, purchasing or selling businesses. Please register and contact our representatives to find more about how you can get your services and offerings in front of millions of very niche and motivated audience. Find out about our easy to set up and very competitive ‘Business On Sell’ advertising plans at www.BizRealWorth.com</span></h6>
     <h6>4. Business Service Vendors like Banks, Insurance, business specific Service Providers - <span>Visit ReallyWorth.com its a platform for very focused and motivated audience to share and receive help regarding their Small Business domain related topics.</span></h6>
 
+    <h2>Mission Statement</h2>
+    <p>Our mission is to help Small Business Community members take control of their hard earned equity by bringing in the clarity around RealWorth&trade; of their business by the help of measurable attributes to induce transparency and confidence. This shall help to maximize ROI at the time of takeover for business buyers or budding entrepreneurs and maximize the payout at the time of exit for business owners!</p>
+    
     <h2>Vision statement</h2>
     <p>
         We want to provide opportunities for Small Business Community to access Real Worth of their assets at every point of the business lifecycle with the aid of data driven technical solutions!
@@ -88,12 +91,9 @@ h2 h6 {
     www.BizRealWorth.com is a Technology Platform with below aspects -
     </p>
 
-    <h6>·  Magnet - <span>Magnet for Customers to come to our website for value we are providing with Business Details, Business Valuation and Business Intelligence.</span></h6>
-    <h6>·  Matchmaker - <span>We connect Buyers to Sellers, Owners to Suppliers and Vendors, Entrepreneurs to Financiers, Business to Financial Service.</span></h6>
+    <h6>·  Magnet - <span>We will attract Small Business Community members to visit our website for value we are providing with Business Details, Business Valuation and Business Intelligence.</span></h6>
+    <h6>·  Matchmaker - <span>We will connect Buyers to Sellers, Owners to Suppliers and Vendors, Entrepreneurs to Financiers, Business to Financial Service.</span></h6>
     <h6>·  Toolkit - <span>Detailed Business worth reports and Detailed Business growth projections reports using AI, ML, DL and Data driven analysis, may be in future APIs for all above customer categories to communicate and integrate with each other.</span></h6>
 
-
-    <h2>Mission Statement</h2>
-    <p>Our mission is to help small business owners take control of their hard earned equity by bringing in the clarity around Real Worth of their business by the help of measurable attributes to induce transparency and confidence. This shall help to maximize the payout at the time of exit for business owners and maximize ROI for at the time of takeover for business buyers or budding entrepreneurs!</p>
 
 </div>
