--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-<title>Real Worth</title>
+<title>RealWorth&trade; - Find RealWorth&trade; of Business!</title>
 
 <!-- Bootstrap -->
 <link href="https://fonts.googleapis.com/css?family=Nunito:300,400,600,700,800,900%7COpen+Sans" rel="stylesheet" type="text/css" />
@@ -225,7 +225,7 @@
     </div>
   </div>
   <div style="text-align:center;border:1px solid red;">
-    <h6 subheadline> &copy; 2020 Designed and Developed in California</h6>
+    <h6 subheadline><small>&copy; 2020 Designed and Developed in California.</small></h6>
   </div>
 </footer>
 <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true" id="termsOfService">
