--- a/src/main/resources/static/resources/pages/aboutUs.html
+++ b/src/main/resources/static/resources/pages/aboutUs.html
@@ -40,8 +40,10 @@ h2 h6 {
 <div class="about-section">
     <h2>Overview</h2>
     <p>www.BizRealWorth.com is dedicated to helping Small Business Community all over US, to measure the RealWorth&trade; of their business or business they want to purchase.</p>
+    
+    <p>This service is launched on 05/10/2020, in the midst of COVID-19 when humanity is strugling to fight the pandemic. As part of the recovery from this situation one of the most significant steps governments all over the US are taking is to substancially help Small Business Community. This is an acknowladgement of SMB as a backbone of Financial as well as Social fabric of American Way of Life!</p>
 
-    <p>Our mission is to empower small business community by the means of digitization of information and advancement in data collection and data processing technologies like Data Mining, Digital Transformations, AI and ML.</p>
+    <p>Our goal is to empower Small Business Community or Main Street USA by the means of digitization of information and advancement in data collection and data processing technologies like Data Mining, Digital Transformations, AI and ML.</p>
 
     <p>Our innovative self evolving algorithm that is named RealWorth&trade; can help you know more about businesses in the area where you are doing business, or thinking of starting business or selling business and can help you visualize the true potential or Real Worth of the opportunity!</p>
 
