--- a/src/main/resources/static/resources/pages/productsAndServices.html
+++ b/src/main/resources/static/resources/pages/productsAndServices.html
@@ -174,8 +174,8 @@ h3 h5 h6 {
         </tr>
         <tr>
             <td>Price</td>
-            <td></td>
-            <td></td>
+            <td>Based on Scope of Work</td>
+            <td>Based on Scope of Work</td>
             <td>$499</td>
             <td>$199(Free with Claim Your Business) **</td>
             <td>Free</td>
