Expand nav bar, removed left right padding

--- a/src/main/resources/static/resources/pages/header.html
+++ b/src/main/resources/static/resources/pages/header.html
@@ -5,14 +5,14 @@
 }
 </style>
 
-<nav class="navbar navbar-expand-lg navbar-dark" id="menu" ng-init="getprofile()">
-  <div class="container">
+<nav class="navbar navbar-expand-lg navbar-dark" style="justify-content:center;"
+     id="menu" ng-init="getprofile()">
   <a class="navbar-brand" href="#home">
   	<div class="" style="display: flex;"><img src="img/logo1.png" alt="" style="height: 50px;width: 200px;"><h3 style="color:rgba(0,0,0,.5);padding-left:10px;"></h3></div>
   </a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menu-content" aria-controls="menu-content" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+<!--  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menu-content" aria-controls="menu-content" aria-expanded="false" aria-label="Toggle navigation">-->
+<!--    <span class="navbar-toggler-icon"></span>-->
+<!--  </button>-->
 
   <div class="collapse navbar-collapse" id="menu-content">
     <ul class="navbar-nav mr-auto">
@@ -168,7 +168,6 @@
       </li>
     </ul>
 
-  </div>
   </div>
 </nav>
 
