Show red pin and For Sale on Top left of business image on search page

--- a/src/main/resources/static/resources/pages/search.html
+++ b/src/main/resources/static/resources/pages/search.html
@@ -45,11 +45,14 @@
 
                             <a class="item-image" href="#businessDetails/{{prop.businessId}}">
                                 <img src="{{prop.imageFirst}}" style="width:400px;height:240px" class="img-fluid" alt="">
+                                <div class="row item-badge-left save-item-left" ng-if="prop.isForSell">
+                                    <img src="../../img/icon/red_marker.svg" style="width:24px;height:24px"/>
+                                    <span>For Sale</span>
+                                </div>
                                 <a class="save-item" ng-class="{'save-item-active': prop.isBookMarked}" ng-click="bookMarked(prop, $index)"><i class="fa fa-star"></i></a>
                             </a>
 
                             <a href="#businessDetails/{{prop.businessId}}" class="item-meta">
-                                <span class="item-badge-left item-sale" ng-if="prop.isForSell">For Sale</span>
                                 <span class="item-badge-right item-address">{{prop.type}}</span>
                                 <br/>
                                 <span class="item-price" ng-if="prop.isforSell">{{ prop.forSellPrice | currency : "$" : false }}</span> &nbsp;&nbsp;
