--- a/src/main/resources/static/resources/pages/header.html
+++ b/src/main/resources/static/resources/pages/header.html
@@ -5,55 +5,46 @@
 }
 </style>
 
-<nav class="navbar navbar-expand-lg navbar-dark" style="justify-content:center;"
-     id="menu" ng-init="getprofile()">
+<nav class="navbar navbar-expand-lg navbar-light" id="menu" ng-init="getprofile()">
   <a class="navbar-brand" href="#home">
   	<div class="" style="display: flex;"><img src="img/logo1.png" alt="" style="height: 50px;width: 200px;"><h3 style="color:rgba(0,0,0,.5);padding-left:10px;"></h3></div>
   </a>
-<!--  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menu-content" aria-controls="menu-content" aria-expanded="false" aria-label="Toggle navigation">-->
-<!--    <span class="navbar-toggler-icon"></span>-->
-<!--  </button>-->
+  <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#menu-content" aria-controls="menu-content" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
   <div class="collapse navbar-collapse" id="menu-content">
-    <ul class="navbar-nav mr-auto">
-      <!-- <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Home <span class="sr-only">(current)</span>
-        </a>
-        <div class="dropdown-menu">
-            <a href="#" class="dropdown-item">Link 1</a>
-            <a href="#" class="dropdown-item">Link 2</a>
-        </div>
-      </li> -->
-
+    <ul class="navbar-nav">
         <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Buyers
             </a>
             <div class="dropdown-menu">
                 <a href="#" class="dropdown-item">Search Business to Buy</a>
                 <a href="#postBuy" class="dropdown-item">Post Buy Requirements</a>
-		<!-- <a href="#contactUs" class="dropdown-item">Post Buy Requirements</a> -->
                 <a href="#businessBuyGuidance" class="dropdown-item">Business Buying Guidance</a>
                 <a href="#" class="dropdown-item">Find the RealWorth of Business you thinking to Buy</a>
                 <a href="#searchAgents" class="dropdown-item">Find Brokers/Attorneys/Consultants/Advisors/Experts*</a>
-                <!-- <a href="#applyLoan" class="dropdown-item">Apply for Business Loan*</a> -->
-		<a href="#contactUs" class="dropdown-item">Apply for Business Loan*</a>
+		        <a href="#contactUs" class="dropdown-item">Apply for Business Loan*</a>
             </div>
         </li>
+    </ul>
+    <ul class="navbar-nav">
         <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#search/sell" role="button" aria-haspopup="true" aria-expanded="false">
-                Sellers
-            </a>
-            <div class="dropdown-menu">
-                <a href="#" class="dropdown-item">Sell a business</a>
-                <a href="#businessSellGuidance" class="dropdown-item">Business Selling Guidance</a>
-                <a href="#search" class="dropdown-item">Find the RealWorth of your Business</a>
-                <a href="#searchAgents" class="dropdown-item">Find Business Brokers/Attorneys/Help to Sell</a>
-            </div>
-        </li>
-        <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#search" role="button" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle" href="#search/sell" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Sellers
+        </a>
+        <div class="dropdown-menu">
+            <a href="#" class="dropdown-item">Sell a business</a>
+            <a href="#businessSellGuidance" class="dropdown-item">Business Selling Guidance</a>
+            <a href="#search" class="dropdown-item">Find the RealWorth of your Business</a>
+            <a href="#searchAgents" class="dropdown-item">Find Business Brokers/Attorneys/Help to Sell</a>
+        </div>
+    </li>
+    </ul>
+    <ul class="navbar-nav">
+      <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Owners
             </a>
             <div class="dropdown-menu">
@@ -64,11 +55,13 @@
                 <a href="#contactUs" class="dropdown-item">Not able to find your business??</a>
             </div>
         </li>
-        <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#searchAgents" role="button" aria-haspopup="true" aria-expanded="false">
-                Business Service Providers
-            </a>
-            <div class="dropdown-menu">
+    </ul>
+    <ul class="navbar-nav">
+      <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#searchAgents" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Business Service Providers
+        </a>
+          <div class="dropdown-menu">
                 <a href="#searchAgents" class="dropdown-item">Brokers</a>
                 <a href="#searchAgents" class="dropdown-item">Attorneys</a>
                 <a href="#searchAgents" class="dropdown-item">Consultants</a>
@@ -77,73 +70,13 @@
                 <a href="#contactUs" class="dropdown-item">Advertise with RealWorth</a>
                 <a href="#searchAgents" class="dropdown-item">Search</a>
             </div>
-        </li>
-	<li class="nav-item">
-		<a class="nav-link nav-btn" ng-click=""><b style="color:red">&#9990; 1-855-522-5579</b></a>
-	</li>
-<!--        <li class="nav-item dropdown">-->
-<!--        <a class="nav-link dropdown-toggle" href="#search/Buy" role="button" aria-haspopup="true" aria-expanded="false">-->
-<!--          Buy-->
-<!--        </a>-->
-<!--        <div class="dropdown-menu">-->
-<!--            <a href="#postBuy" class="dropdown-item">Post Buy Requirement</a>-->
-<!--            <a href="#search/Buy" class="dropdown-item">Buy a Business</a>-->
-<!--            <a href="#businessBuyGuidance" class="dropdown-item">Business Buying Guidance</a>-->
-<!--        </div>-->
-<!--      </li>-->
-
-<!--      <li class="nav-item  dropdown">-->
-<!--        <a class="nav-link  dropdown-toggle" href="#search/sell" role="button" aria-haspopup="true" aria-expanded="false">-->
-<!--          Sell-->
-<!--        </a>-->
-<!--        <div class="dropdown-menu">-->
-<!--            <a href="#" class="dropdown-item">Sell a Business</a>-->
-<!--            <a href="#" class="dropdown-item">Business Selling Guidance</a>-->
-<!--        </div>-->
-<!--      </li>-->
-      <!-- <li class="nav-item  dropdown">
-        <a class="nav-link  dropdown-toggle" href="#search/Lease" role="button" aria-haspopup="true" aria-expanded="false">
-          Lease
-        </a>
-        <div class="dropdown-menu">
-            <a href="#" class="dropdown-item">Lease a Business</a>
-            <a href="#" class="dropdown-item">Lease a Property</a>
-            <a href="#" class="dropdown-item">Business/Property Leasing Guidance</a>
-        </div>
-      </li> -->
-<!--      <li class="nav-item  dropdown">-->
-<!--        <a class="nav-link  dropdown-toggle" href="#search" role="button" aria-haspopup="true" aria-expanded="false">-->
-<!--          Agent-->
-<!--        </a>-->
-<!--        <div class="dropdown-menu">-->
-<!--            <a href="#searchAgents" class="dropdown-item">Search local Business Broker</a>-->
-<!--        </div>-->
-<!--      </li>-->
-<!--      <li class="nav-item  dropdown">-->
-<!--        <a class="nav-link  dropdown-toggle" href="#search" role="button" aria-haspopup="true" aria-expanded="false">-->
-<!--          Estimators-->
-<!--        </a>-->
-<!--        <div class="dropdown-menu">-->
-<!--            <a href="#" class="dropdown-item">BRW Estimator</a>-->
-<!--            <a href="#" class="dropdown-item">BRW ROI Estimator</a>-->
-<!--        </div>-->
-<!--      </li>-->
-<!--        <div class="nav-item" ng-if="isAuthenticated">-->
-<!--	      <a class="nav-link" href="#search" role="button" aria-haspopup="true" aria-expanded="false">-->
-<!--	        Claim a Business-->
-<!--	      </a>-->
-<!--        </div>-->
-<!--        <div class="nav-item" ng-if="!isAuthenticated">-->
-<!--            <a class="nav-link" ng-click="authService.login()" role="button" aria-haspopup="true" aria-expanded="false">-->
-<!--                Claim a Business-->
-<!--            </a>-->
-<!--        </div>-->
-
+      </li>
+      <li class="nav-item">
+          <a class="nav-link nav-btn" ng-click=""><b style="color:red">&#9990; 1-855-522-5579</b></a>
+      </li>
     </ul>
 
     <ul class="navbar-nav ml-auto">
-
-
       <li class="nav-item dropdown user-account" ng-if="isAuthenticated">
         <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <span class="user-image" style="background-image:url({{ profile.picture }});"></span>
