--- a/src/main/resources/static/resources/pages/search.html
+++ b/src/main/resources/static/resources/pages/search.html
@@ -53,14 +53,16 @@
                             </a>
 
                             <a href="#businessDetails/{{prop.businessId}}" class="item-meta">
+                                <span class="item-price" ng-if="prop.isForSell === 'Y'">{{ prop.forSellPrice | currency : "$" : false }}</span> &nbsp;&nbsp;
                                 <span class="item-badge-right item-address">{{prop.type}}</span>
-                                <br/>
-                                <span class="item-price" ng-if="prop.isforSell">{{ prop.forSellPrice | currency : "$" : false }}</span> &nbsp;&nbsp;
-                                <span class="item-badge-right item-price" ng-if="prop.sqftLot">{{prop.sqftLot}} sq ft.</span>
                                 <br/>
                                 <span class="item-address" ng-if="prop.name">{{prop.name}}</span>
                                 <br/>
-                                <span class="item-address">{{ prop.street1 }}, {{prop.city}}, {{prop.stateCode}} {{prop.zip}}</span>
+                                <div ng-if="prop.isHidden === 'N' && (prop.street1 || prop.city)">
+                                    <span class="item-address" ng-if="prop.street1 && prop.street2">{{prop.street1}}, {{prop.street2}}, {{prop.city}} {{prop.stateCode}} {{prop.zip}}</span>
+                                    <span class="item-address" ng-if="prop.street1 && !prop.street2">{{prop.street1}}, {{prop.city}} {{prop.stateCode}} {{prop.zip}}</span>
+                                    <span class="item-address" ng-if="!prop.street1 && !prop.street2">{prop.city}} {{prop.stateCode}} {{prop.zip}}</span>
+                                </div>
                             </a>
                         </div>
                     </div>
