Add hyperlink to phone numbers

--- a/src/main/resources/static/resources/pages/header.html
+++ b/src/main/resources/static/resources/pages/header.html
@@ -72,7 +72,7 @@
             </div>
       </li>
       <li class="nav-item">
-          <a class="nav-link nav-btn" ng-click=""><b style="color:red">&#9990; 1-855-522-5579</b></a>
+          <a class="nav-link nav-btn" ng-click=""><b style="color:red">&#9990; 1-855-5-CALL-RW (<a href=”1-855-522-5579”>)</a></b></a>
       </li>
     </ul>
 
