Changed the phone format and added Social Media connects

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -206,9 +206,9 @@
           <div class="col-4 col-md-4 col-sm-4">
             <h5 subheadline>Connect</h5>
             <div class="social-sharebox">
-                <a href="#"><i class="fa fa-twitter"></i></a>
-                <a href="#"><i class="fa fa-facebook"></i></a>
-                <a href="#"><i class="fa fa-linkedin"></i></a>
+                <!-- <a href="#"><i class="fa fa-twitter"></i></a> -->
+                <a href="www.facebook.com/brw2020"><i class="fa fa-facebook"></i></a>
+                <a href="www.linkedin.com/in/bizrealworth"><i class="fa fa-linkedin"></i></a>
             </div>
             <!-- <a href="#"><i class="fa fa-youtube-play"></i></a> <a href="#"><i class="fa fa-pinterest"></i></a> -->
             <!-- <form>
