Social Media Integration

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -207,8 +207,8 @@
             <h5 subheadline>Connect</h5>
             <div class="social-sharebox">
                 <!-- <a href="#"><i class="fa fa-twitter"></i></a> -->
-                <a href="https://facebook.com/brw2020"><i class="fa fa-facebook"></i></a>
-                <a href="https://linkedin.com/in/bizrealworth"><i class="fa fa-linkedin"></i></a>
+                <a href="https://facebook.com/brw2020" target="_blank"><i class="fa fa-facebook"></i></a>
+                <a href="https://linkedin.com/in/bizrealworth" target="_blank"><i class="fa fa-linkedin"></i></a>
             </div>
             <!-- <a href="#"><i class="fa fa-youtube-play"></i></a> <a href="#"><i class="fa fa-pinterest"></i></a> -->
             <!-- <form>
