--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -225,7 +225,7 @@
     </div>
   </div>
   <div style="text-align:center;border:1px solid red;">
-    <h6 subheadline><small>&copy; 2020 Designed and Developed in California.</small></h6>
+    <h6 subheadline><small>&copy; 2020 BizRealWorth&trade; Designed and Developed in California.</small></h6>
   </div>
 </footer>
 <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true" id="termsOfService">
